https://stackoverflow.com/questions/4

--- a/StackOverflow/Q2.md
+++ b/StackOverflow/Q2.md
@@ -13,7 +13,7 @@ When I try to build it, I get this error
 
 I tried making trans a double, but then the control doesn't work. This code worked fine for me in VB.NET. Any suggestions?
 
-c#
+[c#](https://stackoverflow.com/questions/tagged/c%23)
 
 # Revision 2
 ## Decimal vs Double?
@@ -30,7 +30,7 @@ When I try to build it, I get this error
 
 I tried making trans a double, but then the control doesn't work. This code worked fine for me in VB.NET. Any suggestions?
 
-c# newbie
+[c#](https://stackoverflow.com/questions/tagged/c%23) [newbie](https://stackoverflow.com/questions/tagged/newbie)
 
 # Revision 3
 ## Decimal vs Double?
@@ -47,7 +47,7 @@ When I try to build it, I get this error
 
 I tried making trans a double, but then the control doesn't work. This code worked fine for me in VB.NET. Any suggestions?
 
-c#
+[c#](https://stackoverflow.com/questions/tagged/c%23)
 
 # Revision 4
 ## When setting a form's opacity should I use a decimal or double?
@@ -67,7 +67,7 @@ I tried making `trans` a double, but then the control doesn't work. This code wo
 
 What do I need to do differently?
 
-c#
+[c#](https://stackoverflow.com/questions/tagged/c%23)
 
 # Revision 5
 ## When setting a form's opacity should I use a decimal or double?
@@ -86,3 +86,5 @@ When I try to build it, I get this error:
 I tried making `trans` a double, but then the control doesn't work. This code worked fine for me in VB.NET. 
 
 What do I need to do differently?
+
+[c#](https://stackoverflow.com/questions/tagged/c%23)
