--- a/StackOverflow/Q2.md
+++ b/StackOverflow/Q2.md
@@ -283,3 +283,92 @@ When I try to build it, I get this error
 I tried making trans a double, but then the control doesn't work. This code worked fine for me in VB.NET. Any suggestions?
 
 [c#](https://stackoverflow.com/questions/tagged/c%23) [newbie](https://stackoverflow.com/questions/tagged/newbie)
+
+# Revision 16
+## Decimal vs Double?
+
+I'm new to C#, and I want to use a trackbar for the forms opacity
+This is my code
+
+    decimal trans = trackBar1.Value / 5000
+    this.Opacity = trans
+
+When I try to build it, I get this error
+
+**Cannot implicitly convert type 'decimal' to 'double**
+
+I tried making trans a double, but then the control doesn't work. This code worked fine for me in VB.NET. Any suggestions?
+
+[c#](https://stackoverflow.com/questions/tagged/c%23)
+
+# Revision 17
+## When setting a form's opacity should I use a decimal or double?
+
+I'm new to C# and I want to use a track-bar to change a form's opacity.
+
+This is my code:
+
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+
+When I try to build it, I get this error:
+
+> Cannot implicitly convert type 'decimal' to 'double'.
+
+I tried making `trans` a `double`, but then the control doesn't work. This code has worked fine for me in VB.NET in the past.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [winforms](https://stackoverflow.com/questions/tagged/winforms) [forms](https://stackoverflow.com/questions/tagged/forms) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [opacity](https://stackoverflow.com/questions/tagged/opacity)
+
+# Revision 18
+## When setting a form's opacity should I use a decimal or double?
+
+I want to use a track-bar to change a form's opacity.
+
+This is my code:
+
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+
+When I try to build it, I get this error:
+
+> Cannot implicitly convert type 'decimal' to 'double'.
+
+I tried making `trans` a `double`, but then the control doesn't work. This code has worked fine for me in VB.NET in the past.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [winforms](https://stackoverflow.com/questions/tagged/winforms) [forms](https://stackoverflow.com/questions/tagged/forms) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [opacity](https://stackoverflow.com/questions/tagged/opacity)
+
+# Revision 19
+## When setting a form's opacity should I use a decimal or double?
+
+I want to use a track-bar to change a form's opacity.
+
+This is my code:
+
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+
+When I try to build it, I get this error:
+
+>Cannot implicitly convert type 'decimal' to 'double'.
+
+I tried making **trans** to **double**, but then the control doesn't work. This code has worked fine for me in VB.NET in the past.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [winforms](https://stackoverflow.com/questions/tagged/winforms) [forms](https://stackoverflow.com/questions/tagged/forms) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [opacity](https://stackoverflow.com/questions/tagged/opacity)
+
+# Revision 20
+## When setting a form's opacity should I use a decimal or double?
+
+I want to use a track-bar to change a form's opacity.
+
+This is my code:
+
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+
+When I try to build it, I get this error:
+
+> Cannot implicitly convert type 'decimal' to 'double'.
+
+I tried making `trans` a `double`, but then the control doesn't work. This code has worked fine for me in VB.NET in the past.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [winforms](https://stackoverflow.com/questions/tagged/winforms) [forms](https://stackoverflow.com/questions/tagged/forms) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [opacity](https://stackoverflow.com/questions/tagged/opacity)
