--- a/StackOverflow/Q2.md
+++ b/StackOverflow/Q2.md
@@ -13,7 +13,7 @@ When I try to build it, I get this error
 
 I tried making trans a double, but then the control doesn't work. This code worked fine for me in VB.NET. Any suggestions?
 
-[c#](https://stackoverflow.com/questions/tagged/c%23)
+\fbox{[c#](https://stackoverflow.com/questions/tagged/c%23)}
 
 # Revision 2
 ## Decimal vs Double?
