https://stackoverflow/questions/4/

--- a/StackOverflow/Q2.md
+++ b/StackOverflow/Q2.md
@@ -13,7 +13,7 @@ When I try to build it, I get this error
 
 I tried making trans a double, but then the control doesn't work. This code worked fine for me in VB.NET. Any suggestions?
 
-\fbox{[c#](https://stackoverflow.com/questions/tagged/c%23)}
+[c#](https://stackoverflow.com/questions/tagged/c%23)
 
 # Revision 2
 ## Decimal vs Double?
@@ -372,3 +372,183 @@ When I try to build it, I get this error:
 I tried making `trans` a `double`, but then the control doesn't work. This code has worked fine for me in VB.NET in the past.
 
 [c#](https://stackoverflow.com/questions/tagged/c%23) [winforms](https://stackoverflow.com/questions/tagged/winforms) [forms](https://stackoverflow.com/questions/tagged/forms) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [opacity](https://stackoverflow.com/questions/tagged/opacity)
+
+# Revision 21
+## When setting a form's opacity should I use a decimal or double?
+
+I want to use a track-bar to change a form's opacity.
+
+This is my code:
+
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+
+When I try to build it, I get this error:
+
+> Cannot implicitly convert type 'decimal' to 'double'.
+
+I tried making `trans` a `double`, but then the control doesn't work. This code has worked fine for me in VB.NET in the past.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [winforms](https://stackoverflow.com/questions/tagged/winforms) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [opacity](https://stackoverflow.com/questions/tagged/opacity)
+
+# Revision 22
+## When setting a form's opacity should I use a decimal or double?
+
+I want to use a track-bar to change a form's opacity.
+
+This is my code:
+
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+
+When I try to build it, I get this error:
+
+> Cannot implicitly convert type **'decimal'** to **'double'.**
+
+I tried making `trans` a `double`, but then the control doesn't work. This code has worked fine for me in **`VB.NET in the past`**.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [winforms](https://stackoverflow.com/questions/tagged/winforms) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [opacity](https://stackoverflow.com/questions/tagged/opacity)
+
+# Revision 23
+## When setting a form's opacity should I use a decimal or double?
+
+I want to use a track-bar to change a form's opacity.
+
+This is my code:
+
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+
+When I try to build it, I get this error:
+
+> Cannot implicitly convert type 'decimal' to 'double'.
+
+I tried making `trans` a `double`, but then the control doesn't work. This code has worked fine for me in VB.NET in the past.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [winforms](https://stackoverflow.com/questions/tagged/winforms) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [opacity](https://stackoverflow.com/questions/tagged/opacity)
+
+# Revision 24
+## When setting a form's opacity should I use a decimal or double?
+
+I want to use a track-bar to change a form's opacity.
+
+This is my code:
+
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+
+When I try to build it, I get this error:
+
+> Cannot implicitly convert type 'decimal' to 'double'.
+
+I tried making `trans` a `double`, but then the control doesn't work. This code has worked fine for me in VB.NET in the past.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [winforms](https://stackoverflow.com/questions/tagged/winforms) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [decimal](https://stackoverflow.com/questions/tagged/decimal) [opacity](https://stackoverflow.com/questions/tagged/opacity)
+
+# Revision 25
+## While applying opacity to form, should we use a decimal or double value?
+
+I want to use a track-bar to change a form's opacity.
+
+Here goes my code:
+
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+
+When I build the application, It gives following error:
+
+> Cannot implicitly convert type 'decimal' to 'double'.
+
+I tried using `trans` a `double`, but then the control doesn't work. This code worked fine in past VB.NET project.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [winforms](https://stackoverflow.com/questions/tagged/winforms) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [decimal](https://stackoverflow.com/questions/tagged/decimal) [opacity](https://stackoverflow.com/questions/tagged/opacity)
+
+# Revision 26
+## While applying opacity to a form should we use a decimal or double value?
+
+I want to use a track-bar to change a form's opacity.
+
+This is my code:
+
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+
+When I build the application, it gives the following error:
+
+> Cannot implicitly convert type 'decimal' to 'double'.
+
+I tried using `trans` and `double` but then the control doesn't work. This code worked fine in a past VB.NET project.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [winforms](https://stackoverflow.com/questions/tagged/winforms) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [decimal](https://stackoverflow.com/questions/tagged/decimal) [opacity](https://stackoverflow.com/questions/tagged/opacity)
+
+# Revision 27
+## While applying opacity to a form, should we use a decimal or a double value?
+
+I want to use a track-bar to change a form's opacity.
+
+This is my code:
+
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+
+When I build the application, it gives the following error:
+
+> Cannot implicitly convert type `'decimal'` to `'double'`.
+
+I tried using `trans` and `double` but then the control doesn't work. This code worked fine in a past VB.NET project.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [winforms](https://stackoverflow.com/questions/tagged/winforms) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [decimal](https://stackoverflow.com/questions/tagged/decimal) [opacity](https://stackoverflow.com/questions/tagged/opacity)
+
+# Revision 28
+## Convert Decimal to Double?
+
+I want to use a track-bar to change a form's opacity.
+
+This is my code:
+
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+
+When I build the application, it gives the following error:
+
+> Cannot implicitly convert type `'decimal'` to `'double'`.
+
+I tried using `trans` and `double` but then the control doesn't work. This code worked fine in a past VB.NET project.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [double](https://stackoverflow.com/questions/tagged/double) [decimal](https://stackoverflow.com/questions/tagged/decimal)
+
+# Revision 29
+## Convert Decimal to Double?
+
+I want to use a track-bar to change a form's opacity.
+
+This is my code:
+
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+
+When I build the application, it gives the following error:
+
+> Cannot implicitly convert type `'decimal'` to `'double'`.
+
+I tried using `trans` and `double` but then the control doesn't work. This code worked fine in a past VB.NET project.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [floating-point](https://stackoverflow.com/questions/tagged/floating-point) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [double](https://stackoverflow.com/questions/tagged/double) [decimal](https://stackoverflow.com/questions/tagged/decimal)
+
+# Revision 30
+## Convert Decimal to Double?
+
+I want to use a track-bar to change a form's opacity.
+
+This is my code:
+
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+
+When I build the application, it gives the following error:
+
+> Cannot implicitly convert type `'decimal'` to `'double'`
+
+I tried using `trans` and `double` but then the control doesn't work. This code worked fine in a past VB.NET project.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [floating-point](https://stackoverflow.com/questions/tagged/floating-point) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [double](https://stackoverflow.com/questions/tagged/double) [decimal](https://stackoverflow.com/questions/tagged/decimal)
