--- a/StackOverflow/Q2.md
+++ b/StackOverflow/Q2.md
@@ -552,3 +552,164 @@ When I build the application, it gives the following error:
 I tried using `trans` and `double` but then the control doesn't work. This code worked fine in a past VB.NET project.
 
 [c#](https://stackoverflow.com/questions/tagged/c%23) [floating-point](https://stackoverflow.com/questions/tagged/floating-point) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [double](https://stackoverflow.com/questions/tagged/double) [decimal](https://stackoverflow.com/questions/tagged/decimal)
+
+# Revision 31
+## Convert Decimal to Double
+
+I want to use a track-bar to change a form's opacity.
+
+This is my code:
+
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+
+When I build the application, it gives the following error:
+
+> Cannot implicitly convert type `decimal` to `double`
+
+I tried using `trans` and `double` but then the control doesn't work. This code worked fine in a past VB.NET project.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [floating-point](https://stackoverflow.com/questions/tagged/floating-point) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [double](https://stackoverflow.com/questions/tagged/double) [decimal](https://stackoverflow.com/questions/tagged/decimal)
+
+# Revision 32
+## Convert Decimal to Double
+
+I want to use a track-bar to change a form's opacity.
+
+This is my code:
+
+
+<!-- language: lang-cs -->
+
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+
+When I build the application, it gives the following error:
+
+> Cannot implicitly convert type `decimal` to `double`
+
+I tried using `trans` and `double` but then the control doesn't work. This code worked fine in a past VB.NET project.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [floating-point](https://stackoverflow.com/questions/tagged/floating-point) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [double](https://stackoverflow.com/questions/tagged/double) [decimal](https://stackoverflow.com/questions/tagged/decimal)
+
+# Revision 33
+## Convert Decimal to Double
+
+I want to use a `Track-Bar` to change a `Form`'s opacity.
+
+This is my code:
+
+```c#
+    decimal trans = trackBar1.Value / 5000;
+    this.Opacity = trans;
+```
+
+When I build the application, it gives the following error:
+
+> Cannot implicitly convert type `decimal` to `double`
+
+I have tried using `trans` and `double` but then the `Control` doesn't work. This code worked fine in a past **VB.NET** `Project`.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [floating-point](https://stackoverflow.com/questions/tagged/floating-point) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [double](https://stackoverflow.com/questions/tagged/double) [decimal](https://stackoverflow.com/questions/tagged/decimal)
+
+# Revision 34
+## Convert Decimal to Double
+
+I want to use a `Track-Bar` to change a `Form`'s opacity.
+
+This is my code:
+
+```c#
+decimal trans = trackBar1.Value / 5000;
+this.Opacity = trans;
+```
+
+When I build the application, it gives the following error:
+
+> Cannot implicitly convert type `decimal` to `double`
+
+I have tried using `trans` and `double` but then the `Control` doesn't work. This code worked fine in a past VB.NET project.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [floating-point](https://stackoverflow.com/questions/tagged/floating-point) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [double](https://stackoverflow.com/questions/tagged/double) [decimal](https://stackoverflow.com/questions/tagged/decimal)
+
+# Revision 35
+## Convert Decimal to Double
+
+I want to use a `Track-Bar` to change a `Form`'s opacity.
+
+This is my code:
+
+```c#
+decimal trans = trackBar1.Value / 5000;
+this.Opacity = trans;
+```
+
+When I build the application, it gives the following error:
+
+> Cannot implicitly convert type `decimal` to `double`
+
+I have tried using `trans` and `double` but then the `Control` doesn't work. 
+
+This code worked fine in a past `VB.NET` project.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [floating-point](https://stackoverflow.com/questions/tagged/floating-point) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [double](https://stackoverflow.com/questions/tagged/double) [decimal](https://stackoverflow.com/questions/tagged/decimal)
+
+# Revision 36
+## Convert Decimal to Double
+
+I want to use a `Track-Bar` to change a `Form`'s opacity.
+
+This is my code:
+
+```c#
+decimal trans = trackBar1.Value / 5000;
+this.Opacity = trans;
+```
+
+When I build the application, it gives the following error:
+
+> Cannot implicitly convert type `decimal` to `double`
+
+I have tried using `trans` and `double` but then the `Control` doesn't work. This code worked fine in a past VB.NET project.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [floating-point](https://stackoverflow.com/questions/tagged/floating-point) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [double](https://stackoverflow.com/questions/tagged/double) [decimal](https://stackoverflow.com/questions/tagged/decimal)
+
+# Revision 37
+## How to convert decimal to double in C#?
+
+I want to use a `Track-Bar` to change a `Form`'s opacity.
+
+This is my code:
+
+```c#
+decimal trans = trackBar1.Value / 5000;
+this.Opacity = trans;
+```
+
+When I build the application, it gives the following error:
+
+> Cannot implicitly convert type `decimal` to `double`
+
+I have tried using `trans` and `double` but then the `Control` doesn't work. This code worked fine in a past VB.NET project.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [floating-point](https://stackoverflow.com/questions/tagged/floating-point) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [double](https://stackoverflow.com/questions/tagged/double) [decimal](https://stackoverflow.com/questions/tagged/decimal)
+
+# Revision 38
+## How to convert decimal to double in C#
+
+I want to use a `Track-Bar` to change a `Form`'s opacity.
+
+This is my code:
+
+```c#
+decimal trans = trackBar1.Value / 5000;
+this.Opacity = trans;
+```
+
+When I build the application, it gives the following error:
+
+> Cannot implicitly convert type `decimal` to `double`
+
+I have tried using `trans` and `double` but then the `Control` doesn't work. This code worked fine in a past VB.NET project.
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [floating-point](https://stackoverflow.com/questions/tagged/floating-point) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [double](https://stackoverflow.com/questions/tagged/double) [decimal](https://stackoverflow.com/questions/tagged/decimal)
