https://stackoverflow.com/questions/4

--- a/StackOverflow/Q2.md
+++ b/StackOverflow/Q2.md
@@ -713,3 +713,26 @@ When I build the application, it gives the following error:
 I have tried using `trans` and `double` but then the `Control` doesn't work. This code worked fine in a past VB.NET project.
 
 [c#](https://stackoverflow.com/questions/tagged/c%23) [floating-point](https://stackoverflow.com/questions/tagged/floating-point) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [double](https://stackoverflow.com/questions/tagged/double) [decimal](https://stackoverflow.com/questions/tagged/decimal)
+
+# Suggested Revision
+## How to set the form's opacity from a decimal value into a double?
+
+So I'm building an app using C# and I want to use a `Track-Bar` to change a `Form`'s opacity.
+
+This is my code that I'm dealing with:
+
+```c#
+decimal trans = trackBar1.Value / 5000;
+this.Opacity = trans;
+```
+
+When I build the application, it gives the following error:
+
+> Cannot implicitly convert type `decimal` to `double`
+
+I have tried using `trans` and `double` but then the `Control` doesn't work. This code worked fine in a past VB.NET project.
+
+Is there anything I'm doing wrong here?
+
+[c#](https://stackoverflow.com/questions/tagged/c%23) [floating-point](https://stackoverflow.com/questions/tagged/floating-point) [type-conversion](https://stackoverflow.com/questions/tagged/type-conversion) [double](https://stackoverflow.com/questions/tagged/double) [decimal](https://stackoverflow.com/questions/tagged/decimal) [opacity](https://stackoverflow.com/questions/tagged/opacity) [form](https://stackoverflow.com/questions/tagged/form)
+#### Don't mind the amount of tags. It's something I want to implement in Stack Overflow.
